# multi-model-code-review

./: .gitignore  PLAN.md  README.md  do_review.sh  pyproject.toml
.claude/: checkpoint.md
.claude/skills/code-review/: SKILL.md
entries/2026/02/26/: daily-summary.md
src/ftl_code_review/: cli.py  lint.py  observations.py  report.py  skill.py
src/multi_model_code_review/: __init__.py  aggregator.py  cli.py  fixer.py  git_utils.py  lint.py  observations.py  report.py  reviewer.py  skill.py
src/multi_model_code_review/prompts/: __init__.py  observe.py  review.py  spec_check.py
tests/: __init__.py  test_aggregator.py  test_caller_analysis.py  test_cli.py  test_function_body.py  test_new_observations.py  test_observations.py  test_related_test_files.py  test_reviewer.py  test_run_tests.py  test_test_discoverability.py
