[project]
name = "multi-model-code-review"
version = "0.1.0"
description = "AI-first code review using multiple models to surface issues before human review"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ben Thomasson", email = "bthomass@redhat.com" }
]
keywords = ["ai", "code-review", "multi-model", "claude", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.0",
]

[project.scripts]
code-review = "multi_model_code_review.cli:cli"

[project.urls]
Homepage = "https://github.com/benthomasson/multi-model-code-review"
Repository = "https://github.com/benthomasson/multi-model-code-review"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_model_code_review"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
