[project]
name = "multi-model-code-review"
version = "0.4.0"
description = "AI-first code review using multiple models to surface issues before human review"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ben Thomasson", email = "bthomass@redhat.com" }
]
keywords = ["ai", "code-review", "multi-model", "claude", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "isort>=5.12",
    "ruff>=0.1",
]

[project.scripts]
code-review = "multi_model_code_review.cli:cli"

[project.urls]
Homepage = "https://github.com/benthomasson/multi-model-code-review"
Repository = "https://github.com/benthomasson/multi-model-code-review"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_model_code_review"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
known_first_party = ["multi_model_code_review"]
line_length = 100

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "N", "UP", "B", "SIM", "ASYNC"]
ignore = [
    "E501",    # Line too long (handled by black)
    "SIM108",  # Use ternary operator (readability preference)
    "SIM116",  # Use dictionary instead of if-elif (readability preference)
    "ASYNC109", # Async function with timeout parameter (our pattern is fine)
]
